--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore: ^5.4.2
+  csv: ^6.0.0
   cupertino_icons: ^1.0.8
   expandable_text: ^2.3.0
   firebase_auth: ^5.2.1
